traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:5: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
      cpt += 1; ecritMessage();
                ^TraversalByColumn:7: error: not found: value ecritMesage
      cpt += 1; ecritMesage();
                ^